@@ -199,11 +199,20 @@ public class TypeVisitor implements NodeVisitor {
     public void visit(ReturnStatementNode node) {
         this.visitChildren(node);
         /*try {*/
-            String returnType = node.getChildren().get(0).getType();
-            if (returnType == null) {
+        if(!node.getParent().getParent().getType().equals(parLangE.VOID.getValue())) {
+            if (!node.getChildren().isEmpty()) {
+                String returnType = node.getChildren().getFirst().getType();
+                node.setType(returnType);
+            }else {
                 throw new ReturnNodeException("Type is not defined for return statement");
             }
-            node.setType(returnType);
+        }else{
+            if(node.getChildren().isEmpty()){
+                node.setType(parLangE.VOID.getValue());
+            }else {
+                throw new ReturnNodeException("return type is not void for void-returning local method");
+            }
+        }
         /*}
         catch (ReturnNodeException e) {
             exceptions.add(e);
@@ -255,10 +264,15 @@ public class TypeVisitor implements NodeVisitor {
     public void visit(LocalMethodBodyNode node) {
         this.visitChildren(node);
         /*try{*/
-            node.setType(node.getChildren().get(node.getChildren().size()-1).getType());
-            if (node.getType() == null) {
-                throw new LocalMethodBodyNodeException("Return type is not defined for local method body node");
+        if(!node.getParent().getType().equals(parLangE.VOID.getValue())){
+            if(!node.getChildren().isEmpty()&&(node.getChildren().getLast()instanceof ReturnStatementNode)){
+                node.setType(node.getChildren().getLast().getType());
+            }else{
+                throw new LocalMethodBodyNodeException("Return statement missing from local method which does not return void");
             }
+        }else{
+            node.setType(parLangE.VOID.getValue());//If there is a return statement, it is checked in visit(ReturnStatement node) that it is "return;". So an erro should already have been produced
+        }
         /*}
         catch (LocalMethodBodyNodeException e) {
         exceptions.add(e);
@@ -496,7 +510,7 @@ public class TypeVisitor implements NodeVisitor {
             if (node.getMethodType().equals(parLangE.LOCAL.getValue())){
                 String childType = node.getChildren().get(1).getType(); //getting BodyNode child
                 String nodeType = node.getType();
-                if (canConvert(nodeType, childType)) {
+                if (!canConvert(nodeType, childType)) {
                     throw new MethodDclNodeException("Return does not match returnType of method " + node.getId());
                 }
             }
@@ -587,7 +601,7 @@ public class TypeVisitor implements NodeVisitor {
             if (node.getValue() == null) {
                 throw new StringNodeException("StringNode value is null");
             }
-            node.setType("string");
+            node.setType(parLangE.STRING.getValue());
        /* }
         catch (StringNodeException e) {
             exceptions.add(e);
@@ -770,6 +784,7 @@ public class TypeVisitor implements NodeVisitor {
     @Override
     public void visit(ArrayAccessNode node) {
         /*try{*/
+            this.visitChildren(node);
             String id = node.getAccessIdentifier();
             Attributes attributes;
             if (hasParent(node, StateAccessNode.class)){
@@ -781,7 +796,8 @@ public class TypeVisitor implements NodeVisitor {
             if (attributes == null){
                 throw new ArrayAccessException("Array: " + id + " not found");
             }
-            node.setType(attributes.getVariableType());
+            String accessType = removeBrackets(attributes.getVariableType());
+            node.setType(accessType);
         /*}
         catch (ArrayAccessException e) {
             exceptions.add(e);
@@ -789,6 +805,11 @@ public class TypeVisitor implements NodeVisitor {
         catch (Exception e) {
             exceptions.add(new ArrayAccessException(e.getMessage() + " in ArrayAccessNode"));
         }*/
+    }
+
+    private String removeBrackets(String arrayType){
+        //Remove all trailing brackets after access type
+        return arrayType.split("\\[")[0];
     }
 
     @Override
@@ -842,8 +863,8 @@ public class TypeVisitor implements NodeVisitor {
         this.visitChildren(node);
         /*try {*/
             for (AstNode child : node.getChildren()) {
-                if (!child.getType().equals("string")) {
-                    if (child.getType().equals("int") || child.getType().equals("double")) {
+                if (!child.getType().equals(parLangE.STRING.getValue())) {
+                    if (child.getType().equals(parLangE.INT.getValue()) || child.getType().equals(parLangE.DOUBLE.getValue())) {
                         continue;
                     }
                     throw new PrintException("Print statement only accepts string arguments");
